[gd_scene load_steps=4 format=3 uid="uid://t2dui8ppm3a4"]

[ext_resource type="Script" uid="uid://gmrv6pgchkwc" path="res://addons/maaacks_menus_template/base/scenes/credits/auto_scroll_container.gd" id="2_ak7hi"]
[ext_resource type="Script" uid="uid://cc2wtqasev7le" path="res://addons/maaacks_menus_template/base/scenes/credits/credits_label.gd" id="3_kngql"]
[ext_resource type="Script" uid="uid://bnub0cq2y0deh" path="res://addons/maaacks_menus_template/base/scenes/credits/scrolling_credits.gd" id="4"]

[node name="ScrollingCredits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
scroll_vertical = 100
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("2_ak7hi")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeaderSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 720)
layout_mode = 2

[node name="CreditsLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true
fit_content = true
scroll_active = false
script = ExtResource("3_kngql")
h1_font_size = 64
h2_font_size = 48
h3_font_size = 32
h4_font_size = 24
h5_font_size = 20
h6_font_size = 16
max_image_width = 80

[node name="FooterSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 720)
layout_mode = 2

[connection signal="end_reached" from="ScrollContainer" to="." method="_on_scroll_container_end_reached"]
